# examples/java/prophet_example_spring/gen/spring-boot/src/main/java/com/example/prophet/generated/actions/handlers/CreateOrderActionHandler.java
@@ -1,0 +1,10 @@
+package com.example.prophet.generated.actions.handlers;
+
+import javax.annotation.processing.Generated;
+import com.example.prophet.generated.actions.CreateOrderCommand;
+import com.example.prophet.generated.actions.CreateOrderResult;
+
+@Generated("prophet-cli")
+public interface CreateOrderActionHandler {
+    CreateOrderResult handle(CreateOrderCommand request);
+}
